--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Tweaks/iSponsorBlock"]
 	path = Tweaks/iSponsorBlock
-	url = https://github.com/Galactic-Dev/iSponsorBlock.git
+	url = https://github.com/Galactic-Dev/iSponsorBlock
 	branch = master
 [submodule "Tweaks/YTUHD"]
 	path = Tweaks/YTUHD
